from enum import Enum

class StatusType(Enum):

    ONGOING = 0
    END = 1