from enum import Enum


class Config(Enum):
    RESEARCH_DEPTH_PLAYER_VS_AI = 2
    RESEARCH_DEPTH_AI_VS_AI = 2
    AI_PAUSE_TIME = 0.5